# cube-memory

./: .gitignore  DISTILL_STATUS.md  EVAL_RESULTS.md  IDEAS_FUTURE_PAPER_2_RUBIK_GEN.md  LOCAL_DISTILL_PLAN.md  PAPER_OUTLINE.md  PHASE2_STATUS.md  QWEN36_27B_TOKS.md  README.md  RISKS.md  SPEC.md  V3_ANALYSIS.md  bfcl_eval.py  bootstrap_distill.py  test_endpoint.py
.github/workflows/: ci.yml
baselines/: qwen36-vulkan-profile.md
llama-cpp-prs/: sparse-mul-mat-id-dispatch.md
paper/: main.bbl  main.tex  references.bib
phase0/: fhrr.py  recall_test.py
phase1/: PLAN.md  control_linear_only.py  cube_memory_layer.py  cube_memory_layer_v2.py  cube_memory_layer_v3.py  diagnose_residual.py  distill.py  export_cleanup_test_case.py  export_layer_test_case.py  export_retrieve_test_case.py  export_to_gguf.py  fineweb_sample.py  hf_extract_activations.py  llama_cpp_cact_dump.patch  per_layer_trainer.py  rank_sweep.py  reviewer_exp1_svd_spectrum.py  reviewer_exp2_topk_scaling.py  reviewer_exp3_flops.py  reviewer_exp4_codebook_ablation.py  run_local_distill.py  run_local_distill_real.py  svd_for_model.py  swap_ffn.py  test-cube-memory-roundtrip  test_cube_memory_roundtrip.cpp  train_hybrid.py  vsa_moe.py
phase1/tests/: test_distill.py  test_layer.py  test_per_layer_trainer.py  test_swap.py
reviewer_results/: exp1_svd_spectrum.json  exp3_flops.json  qwen3-4b-fineweb_svd.json  qwen3-4b_svd.json  qwen3-8b-gguf_svd.json
rubik-gen/: VALIDATION_RESULT.md  exp1_vsa_token_binding.py  exp1b_vsa_with_decoder.py  exp1c_factored_codebook.py  exp2_real_token_binding.py  exp3_permutation_vsa.py  exp4_permutation_reconstruction.py  extract_codebook.py  fetch_codebook.py  generate_figures.py  validate_permutation_locality.py
rubik-gen/results/: exp1_vsa_capacity.json  exp1b_mlp_only_control.json  exp1b_vsa_decoder.json  exp1c_factored.json  exp2_real_tokens_d4096.json  exp3_permutation_vsa.json  exp4_permutation_reconstruction.json
shaders/: Cargo.toml  README.md  rust-toolchain.toml
shaders/cube-memory-host/: Cargo.toml
shaders/cube-memory-host/src/: cpu.rs  gpu.rs  lib.rs
shaders/cube-memory-host/tests/: parity.rs
shaders/cube-memory-shader/: Cargo.toml
shaders/cube-memory-shader-builder/: Cargo.toml
shaders/cube-memory-shader-builder/src/: main.rs
shaders/cube-memory-shader/src/: lib.rs
